# px4_code2

./: CMakeLists.txt  LICENSE.txt  README.md  diagram.odp  install.sh  package.xml  plugin.xml  rqt_tuto.workspace
include/px4_code2/: server.h
include/utils/: utility.h
launch/: client.launch  server_optitrack.launch  server_t265.launch
map/bt/: 4floor.bt  4floor_real.bt
map/path/: target1_path.txt  target1_test1.txt  target1_test2.txt  target1_test3.txt  target2_path.txt  target2_test3.txt
msg/: phase.msg
qt_settings/: setting.ini
resource/: install_geographic.sh  pixhawk4Air.params  px4_fmu-v5_default.px4
resource/diagram/: diagram.odp
resource/gcs_rqt/: gcs_plugin.cpp  gcs_plugin.h
resource/gcs_widget/: gcs_plugin.pro  img.qrc  widget.cpp  widget.h  widget.ui
rviz/: client.perspective  client.rviz  client_noetic.perspective  log_80_2021-1-27-12-46-48.ulg  server.rviz
src/: server.cpp
src/exe/: server_node.cpp
src/px4_code2/: CMakeLists.txt  package.xml
src/px4_code2/include/px4_code2/: server.h
src/px4_code2/launch/: server_t265.launch
src/px4_code2/src/: server.cpp
src/px4_code2/src/utils/: utility.cpp
src/px4_code2/srv/: Takeoff.srv
src/utils/: utility.cpp
srv/: Land.srv  Lock.srv  Takeoff.srv  UploadTrajectory.srv
